/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'maven-publish'
    id 'jacoco'
}

test {
    useJUnitPlatform()
}

repositories {
    mavenLocal()
    
    jcenter()
    
    maven {
        url = 'https://mvnrepository.com/artifact'
    }
    flatDir {
        dirs 'lib'
    }
}

dependencies {
    compile 'com.google.inject:guice:4.2.2'
    compile 'log4j:log4j:1.2.17'
    compile 'org.mongodb:mongo-java-driver:3.10.2'
    compile 'org.threeten:threetenbp:1.4.0'
    compile 'swagger-java-client:swagger-java-client-1.0.0'
    // https://mvnrepository.com/artifact/javax.json/javax.json-api
	compile 'javax.json:javax.json-api:1.1.4'
	compile 'org.glassfish:javax.json:1.1.4'
	
    testCompile 'org.mockito:mockito-core:2.27.0'
    testCompile 'org.hamcrest:hamcrest:2.1'
	// https://mvnrepository.com/artifact/com.github.tomakehurst/wiremock
	testCompile 'com.github.tomakehurst:wiremock-jre8:2.23.2'
	
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'	
}

group = 'EveMarket'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'
targetCompatibility = '11'

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
